src/plugins/kibana_overview/public/components/_overview.scss
/*
 * Licensed to Elasticsearch B.V. under one or more contributor
 * license agreements. See the NOTICE file distributed with
 * this work for additional information regarding copyright
 * ownership. Elasticsearch B.V. licenses this file to you under
 * the Apache License, Version 2.0 (the "License"); you may
 * not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

// Local page variables
$pageWidth: 1200px;

.kbnOverviewWrapper {
  background-color: $euiColorEmptyShade;
  display: flex;
  flex-direction: column;
  min-height: calc(100vh - #{$euiHeaderHeightCompensation});
}

.kbnOverviewHeader {
  background-color: $euiPageBackgroundColor;
  border-bottom: $euiBorderWidthThin solid $euiColorLightShade;
}

.kbnOverviewHeader__inner {
  margin: 0 auto;
  max-width: $pageWidth;
  padding: $euiSizeXL $euiSize;
}

// Accounting for no `flush="both"` prop on EuiButtonEmpty
.kbnOverviewHeader__actionItem .euiButtonEmpty__content {
  padding-left: 0;
  padding-right: 0;
}

.kbnOverviewContent {
  margin: 0 auto;
  max-width: $pageWidth;
  padding: $euiSizeXL $euiSize;
  width: 100%;
}

// Prevent children from rendering as flex items
.kbnOverviewGettingStarted__content {
  display: block;
}

.kbnOverviewGettingStarted__apps .euiIcon__fillSecondary {
  fill: $euiColorDarkestShade;
}

.kbnOverviewApps__item {
  .kbnOverviewApps__group--primary & {
    @include euiBreakpoint('m', 'l', 'xl') {
      max-width: calc(50% - #{$euiSizeM * 2});
    }
  }

  .kbnOverviewApps__group--secondary & {
    @include euiBreakpoint('m', 'l', 'xl') {
      max-width: calc(25% - #{$euiSizeM * 2});
    }
  }
}

.kbnOverviewNews__content article {
  & + article {
    margin-top: $euiSizeL;
  }

  &,
  header {
    & > * + * {
      margin-top: $euiSizeXS;
    }
  }

  h3 {
    font-weight: inherit;
  }
}

.kbnOverviewMore__item {
  @include euiBreakpoint('m', 'l', 'xl') {
    max-width: calc(33.333333333333333% - #{$euiSizeM * 2});
  }
}

.kbnOverviewSolution__icon {
  background-color: $euiColorEmptyShade !important;
  box-shadow: none !important;
  height: $euiSizeL * 2;
  padding: $euiSizeM;
  width: $euiSizeL * 2;
}

.kbnOverviewSupplements--noNews .kbnOverviewMore {
  h2 {
    @include euiBreakpoint('m', 'l', 'xl') {
      text-align: center;
    }
  }

  .kbnOverviewMore__content {
    @include euiBreakpoint('m', 'l', 'xl') {
      justify-content: center;
    }
  }
}

.kbnOverviewData--expanded {
  flex-direction: column;

  &,
  & > * {
    margin-bottom: 0 !important;
    margin-top: 0 !important;
  }
}

.kbnOverviewDataAdd__actions {
  // Prevent children from rendering as flex items
  display: block;

  // Accounting for no `flush="both"` prop on EuiButtonEmpty
  .euiButtonEmpty__content {
    padding-left: 0;
    padding-right: 0;
  }
}

.kbnOverviewDataAdd__content,
.kbnOverviewDataManage__content {
  & .euiIcon__fillSecondary {
    fill: $euiColorDarkestShade;
  }
}

.kbnOverviewDataManage__item:not(:only-child) {
  @include euiBreakpoint('m', 'l', 'xl') {
    flex: 0 0 calc(50% - #{$euiSizeM * 2});
  }
}

